exports[`selectAllOmit Tests > multi-table join - omit from both tables > should run and return correct type 1`] = `
[
  {
    "User.id": 1,
    "User.name": "John Doe",
    "User.age": 25,
    "Post.id": 1,
    "Post.title": "Blog 1",
    "Post.published": false,
    "Post.createdAt": "2020-01-15T10:30:00.000Z",
    "Post.authorId": 1,
    "Post.lastModifiedById": 1,
    "Post.metadata": {
      "name": "Blog Post 1",
      "tags": [
        "prisma",
        "ts"
      ]
    }
  },
  {
    "User.id": 1,
    "User.name": "John Doe",
    "User.age": 25,
    "Post.id": 2,
    "Post.title": "blog 2",
    "Post.published": false,
    "Post.createdAt": "2020-06-20T14:45:00.000Z",
    "Post.authorId": 1,
    "Post.lastModifiedById": 1,
    "Post.metadata": null
  },
  {
    "User.id": 2,
    "User.name": "John Smith",
    "User.age": 30,
    "Post.id": 3,
    "Post.title": "blog 3",
    "Post.published": false,
    "Post.createdAt": "2021-12-25T08:00:00.000Z",
    "Post.authorId": 2,
    "Post.lastModifiedById": 2,
    "Post.metadata": null
  }
]
`;

exports[`selectAllOmit Tests > multi-table join - omit from one table > should run and return correct type 1`] = `
[
  {
    "User.id": 1,
    "User.name": "John Doe",
    "User.age": 25,
    "Post.id": 1,
    "Post.title": "Blog 1",
    "Post.content": "Something",
    "Post.published": false,
    "Post.createdAt": "2020-01-15T10:30:00.000Z",
    "Post.authorId": 1,
    "Post.lastModifiedById": 1,
    "Post.metadata": {
      "name": "Blog Post 1",
      "tags": [
        "prisma",
        "ts"
      ]
    }
  },
  {
    "User.id": 1,
    "User.name": "John Doe",
    "User.age": 25,
    "Post.id": 2,
    "Post.title": "blog 2",
    "Post.content": "sql",
    "Post.published": false,
    "Post.createdAt": "2020-06-20T14:45:00.000Z",
    "Post.authorId": 1,
    "Post.lastModifiedById": 1,
    "Post.metadata": null
  },
  {
    "User.id": 2,
    "User.name": "John Smith",
    "User.age": 30,
    "Post.id": 3,
    "Post.title": "blog 3",
    "Post.content": null,
    "Post.published": false,
    "Post.createdAt": "2021-12-25T08:00:00.000Z",
    "Post.authorId": 2,
    "Post.lastModifiedById": 2,
    "Post.metadata": null
  }
]
`;

exports[`selectAllOmit Tests > single table - omit multiple fields > should run and return correct type 1`] = `
[
  {
    "id": 1,
    "name": "John Doe"
  },
  {
    "id": 2,
    "name": "John Smith"
  },
  {
    "id": 3,
    "name": null
  }
]
`;

exports[`selectAllOmit Tests > single table - omit one field - col > should run and return correct type 1`] = `
[
  {
    "id": 1,
    "name": "John Doe",
    "age": 25
  },
  {
    "id": 2,
    "name": "John Smith",
    "age": 30
  },
  {
    "id": 3,
    "name": null,
    "age": null
  }
]
`;
